--- a/thesis_skel/thesis_CRnNu.tex
+++ b/thesis_skel/thesis_CRnNu.tex
@@ -116,7 +116,7 @@ The future advancements of the AugerPrime~\cite{ANASTASI2022167497} will further
 
 \subsubsection*{Cosmic Ray arrival directions}
 \label{subsubsec:CRdirec}
-Even though the CRs are mostly charged particles and can easily get deflected by the magnetic fields~\cite{Ar_mburo_Garc_a_2021} present in the cosmos one can still estimate the arrival directions of these CRs with the help of a good pointing resolution and an understanding of these magnetic fields. The pointing resolution depends on the detector and the Pierre Auger Observatory already has an excellent pointing accuracy of ~$0.7^{\circ}$~\cite{BONIFAZI200920}. The magnetic fields on the other hand are complicated to deduce and model. However, this lack of knowledge can be ignored by just looking at CRs of high energies since the expected deflections for such CRs are expected to be small. At Pierre Auger Observatory the arrival directions of more than 2,600 CRs above 32EeV were estimated and analyzed to look for potential sources of these CRs~\cite{Abreu_2022}. The results are shown in Fig.~\ref{} The figure clearly shows the presence of Anisotropies which are deviations from uniformity across the sky. The anisotropies are also pointed away from the Galactic centre indicating that the UHECRs have an extragalactic origin. The hypothesis is further confirmed by the increase in anisotropy with energy shown in ~\cite{}. The presence of these anisotropies not far from the Galactic spiral arm as shown in fig~\ref{Aab_2018} also gives further proof of an extragalactic origin of these UHECRs. Further, for low energies E> 0.03 EeV studies looking at large scale structures such as dipolar flux modulation in ~\cite{Aab_2020_dipole_modulation} also show a shift of the anisotropy dipole more towards the galactic center with decreasing energy with a significance of ~6$\sigma$. This can again be interpreted as a transition in CR sources from Galactic to extragalactic component. Even though this result is corroborated by the measurements done by KASCADE-Grande, IceCube and IceTop due to the decrease in sensitivity of the Pierre Auger experiment for these energies the result is not conclusive yet.
+Even though the CRs are mostly charged particles and can easily get deflected by the magnetic fields~\cite{Ar_mburo_Garc_a_2021} present in the cosmos one can still estimate the arrival directions of these CRs with the help of a good pointing resolution and an understanding of these magnetic fields. The pointing resolution depends on the detector and the Pierre Auger Observatory already has an excellent pointing accuracy of ~$0.7^{\circ}$~\cite{BONIFAZI200920}. The magnetic fields on the other hand are complicated to deduce and model. However, this lack of knowledge can be ignored by just looking at CRs of high energies since the expected deflections for such CRs are expected to be small. At Pierre Auger Observatory the arrival directions of more than 2,600 CRs above 32EeV were estimated and analyzed to look for potential sources of these CRs~\cite{Abreu_2022}. The results are shown in Fig.~\ref{} The figure clearly shows the presence of Anisotropies which are deviations from uniformity across the sky. The anisotropies are also pointed away from the Galactic centre indicating that the UHECRs have an extragalactic origin. The hypothesis is further confirmed by the increase in anisotropy with energy shown in ~\cite{}. The presence of these anisotropies not far from the Galactic spiral arm as shown in fig~\ref{} also gives further proof of an extragalactic origin of these UHECRs. Further, for low energies E> 0.03 EeV studies looking at large scale structures such as dipolar flux modulation in ~\cite{Aab_2020_dipole_modulation} also show a shift of the anisotropy dipole more towards the galactic center with decreasing energy with a significance of ~6$\sigma$. This can again be interpreted as a transition in CR sources from Galactic to extragalactic component. Even though this result is corroborated by the measurements done by KASCADE-Grande, IceCube and IceTop due to the decrease in sensitivity of the Pierre Auger experiment for these energies the result is not conclusive yet.
 
 Some proposed sources for these UHECRs due to observations of excess UHECRs in their surrounding regions by the Pierre Auger Observatory are presented in ~\cite{TelescopeArray:2021gxg}(ICRC proceeding). These include the Centaurus A region(~4$\sigma$ significance), starburst galaxies(~3.8$\sigma$) such as NGC4945, M83 and NGC253. The Telescope Array has also found an excess close to the Perseus-Pisces supercluster(PPSC) with a significance of ~3.0-3.2$\sigma$. However, this has been negated by the Pierre Auger Observatory and remains a topic of discussion. With the continued data taking and upgrade of the Pierre Auger Observatory, the excess in the Centaurus A region is expected to reach a 5$\sigma$ significance by 2025 which could make it the first steady source of UHECRs ever observed. 
  
@@ -306,14 +306,14 @@ The production and detection mechanisms discussed offer us the basic ingredients
   \begin{minipage}[t]{.45\textwidth}
     \centering
     \includegraphics[width=\textwidth]{thesis_figures/exclusion_invisible.png}
-    \caption{Current limits for invisible mode for 90\% C.L. exclusion region in the ($m_{A'},\epsilon$) plane ~\cite{2019EPJWC.21206005K}.}
+    \caption{Current limits for invisible mode for 90\% C.L. exclusion region in the ($m_{A'},\epsilon$) plane ~\cite{}.}
     \label{fig:exclusion_invisible}
   \end{minipage}
   \hfill
   \begin{minipage}[t]{.45\textwidth}
     \centering
     \includegraphics[width=\linewidth]{thesis_figures/exclusion_visible_latest.png}
-    \caption{Current limits for invisible mode for 90\% C.L. exclusion region in the ($m_{A'},\epsilon$) plane. The blue plane is with 2017 data and the dotted line is with 2017+2018 data for NA64. The red line is the region that might explain the X17 boson~\cite{2019EPJWC.21206005K}.}
+    \caption{Current limits for invisible mode for 90\% C.L. exclusion region in the ($m_{A'},\epsilon$) plane. The blue plane is with 2017 data and the dotted line is with 2017+2018 data for NA64. The red line is the region that might explain the X17 boson~\cite{}.}
     \label{fig:exclusion_visible}
   \end{minipage}
 \end{figure}
