--- a/thesis_skel/thesis_refs.bib
+++ b/thesis_skel/thesis_refs.bib
@@ -2765,6 +2765,121 @@ author =  {Pierre Billoir}
   month         = {8},
   year          = {2011}
 }
+@article{PierreAuger:2010zof,
+  author        = {Abraham, J. and others},
+  collaboration = {Pierre Auger},
+  title         = {{Trigger and Aperture of the Surface Detector Array of the Pierre Auger Observatory}},
+  eprint        = {1111.6764},
+  archiveprefix = {arXiv},
+  primaryclass  = {astro-ph.IM},
+  reportnumber  = {FERMILAB-PUB-10-094-A-PPD-TD},
+  doi           = {10.1016/j.nima.2009.11.018},
+  journal       = {Nucl. Instrum. Meth. A},
+  volume        = {613},
+  pages         = {29--39},
+  year          = {2010}
+}
+@article{Cooper-Sarkar:2011jtt,
+  author        = {Cooper-Sarkar, Amanda and Mertsch, Philipp and Sarkar, Subir},
+  title         = {{The high energy neutrino cross-section in the Standard Model and its uncertainty}},
+  eprint        = {1106.3723},
+  archiveprefix = {arXiv},
+  primaryclass  = {hep-ph},
+  doi           = {10.1007/JHEP08(2011)042},
+  journal       = {JHEP},
+  volume        = {08},
+  pages         = {042},
+  year          = {2011}
+}
+@article{Feldman:1997qc,
+  author        = {Feldman, Gary J. and Cousins, Robert D.},
+  title         = {{A Unified approach to the classical statistical analysis of small signals}},
+  eprint        = {physics/9711021},
+  archiveprefix = {arXiv},
+  reportnumber  = {HUTP-97-A096},
+  doi           = {10.1103/PhysRevD.57.3873},
+  journal       = {Phys. Rev. D},
+  volume        = {57},
+  pages         = {3873--3889},
+  year          = {1998}
+}
+@article{Gammapy:2023gvb,
+  author        = {Donath, Axel and others},
+  collaboration = {Gammapy},
+  title         = {{Gammapy: A Python package for gamma-ray astronomy}},
+  eprint        = {2308.13584},
+  archiveprefix = {arXiv},
+  primaryclass  = {astro-ph.IM},
+  doi           = {10.1051/0004-6361/202346488},
+  journal       = {Astron. Astrophys.},
+  volume        = {678},
+  pages         = {A157},
+  year          = {2023}
+}
+@article{Rolke:2000ij,
+  author        = {Rolke, Wolfgang A. and Lopez, Angel M.},
+  title         = {{Confidence intervals and upper bounds for small signals in the presence of background noise}},
+  eprint        = {hep-ph/0005187},
+  archiveprefix = {arXiv},
+  doi           = {10.1016/S0168-9002(00)00935-9},
+  journal       = {Nucl. Instrum. Meth. A},
+  volume        = {458},
+  pages         = {745--758},
+  year          = {2001}
+}
+@article{Rolke:2004mj,
+  author        = {Rolke, Wolfgang A. and Lopez, Angel M. and Conrad, Jan},
+  editor        = {Lyons, L. and Karagoz, Muge},
+  title         = {{Limits and confidence intervals in the presence of nuisance parameters}},
+  eprint        = {physics/0403059},
+  archiveprefix = {arXiv},
+  doi           = {10.1016/j.nima.2005.05.068},
+  journal       = {Nucl. Instrum. Meth. A},
+  volume        = {551},
+  pages         = {493--503},
+  year          = {2005}
+}
+@misc{TRolke_ROOT,
+  title        = {TRolke Class Reference},
+  url         = {https://root.cern/doc/v628/classTRolke.html}
+}
+@article{Conrad:2002kn,
+  author        = {Conrad, Jan and Botner, O. and Hallgren, A. and Perez de los Heros, Carlos},
+  title         = {{Including systematic uncertainties in confidence interval construction for Poisson statistics}},
+  eprint        = {hep-ex/0202013},
+  archiveprefix = {arXiv},
+  doi           = {10.1103/PhysRevD.67.012002},
+  journal       = {Phys. Rev. D},
+  volume        = {67},
+  pages         = {012002},
+  year          = {2003}
+}
+@article{Conrad:2005zm,
+  author        = {Conrad, Jan and Tegenfeldt, Fredrik},
+  title         = {{Likelihood ratio intervals with Bayesian treatment of uncertainties: Coverage, power and combined experiments}},
+  booktitle     = {{PHYSTAT (2005): Statistical Problems in Particle Physics, Astrophysics and Cosmology}},
+  eprint        = {physics/0511055},
+  archiveprefix = {arXiv},
+  doi           = {10.1142/9781860948985_0020},
+  pages         = {93--96},
+  month         = {11},
+  year          = {2005}
+}
+@article{PierreAuger:2017pzq,
+  author        = {Aab, Alexander and others},
+  collaboration = {Pierre Auger},
+  title         = {{Observation of a Large-scale Anisotropy in the Arrival Directions of Cosmic Rays above $8 \times 10^{18}$ eV}},
+  eprint        = {1709.07321},
+  archiveprefix = {arXiv},
+  primaryclass  = {astro-ph.HE},
+  reportnumber  = {FERMILAB-PUB-17-354},
+  doi           = {10.1126/science.aan4338},
+  journal       = {Science},
+  volume        = {357},
+  number        = {6537},
+  pages         = {1266--1270},
+  year          = {2017}
+}
 @inproceedings{Blobel:2002ax,
   author        = {Blobel, Volker and Kleinwort, Claus},
   title         = {{A New method for the high precision alignment of track
