--- a/thesis_skel/thesis_setup.tex
+++ b/thesis_skel/thesis_setup.tex
@@ -72,8 +72,8 @@ AugerPrime~\cite{ANASTASI2022167497} also called Auger Phase 2,  is the ongoing 
 In the context of this thesis, the data from the ongoing upgrade and the preceding test array were not used. However, it is important to mention that the higher sampling rate available with the UUBs and the addition of RD could offer a way to improve the current neutrino analysis. The higher sampling rate could help in reducing the effect of the background muons especially at lower zenith angles ($\sim 60^{\circ}$) whereas the RD in conjunction with WCD could help improve the neutrino detection efficiency for higher zenith angles ($\gtrsim 75^{\circ}$) by improving the T3 efficiency. Also, a general increase in the statistics and continued data taking till the 2030s will help enhance the limits in case of non-detection of cosmogenic neutrinos which have further important implications for the CR spectrum especially for the cutoff as discussed before. The upgrade will also help improve the multi-messenger astronomy capabilities of the Observatory. 
 
 
-% \section{The $\mathrm{\overline{Off}\underline{line}}$ Framework}
-% \label{sec:Offline}
+\section{The \texorpdfstring{$\mathrm{\overline{Off}\underline{line}}$}{} Framework}
+\label{sec:Offline}
 
 The $\mathrm{\overline{Off} \underline{line}}$ framework~\cite{Argiro:2007qg,PierreAuger:2023cqe} is the C++ based software developed internally by the Pierre Auger Observatory to reconstruct air showers and perform cosmic ray analysis. It can process and reconstruct both air shower simulation outputs from generators such as CORSIKA~\cite{Heck:1998vt}, Aires~\cite{Sciutto:1999jh} etc. and the data recorded at the Observatory. $\mathrm{\overline{Off} \underline{line}}$ aims to standardize basic quantities such as detector response for simulations and important variables inferred from reconstructing an EAS for the entire Collaboration. This helps in providing the collaboration with a homogenous backbone to build physics analysis. It also allows for the physics analysis to be stored and implemented within the framework which helps in leading and optimising productivity. The modular design allows it to be constantly updated for the addition of new functionality and detectors. The framework is available internally on Gitlab to the entire Collaboration with regularly planned public releases. $\mathrm{\overline{Off} \underline{line}}$ consists of three fundamental constituents as shown in fig.~\ref{}. These are summarised below:
 
